firefox image alignment fix

--- a/public/sass/templates/_about.sass
+++ b/public/sass/templates/_about.sass
@@ -83,7 +83,7 @@
 
     @media (min-width: $screen-xs)
       padding: $unit*10 !important
-      min-height: 50vh
+      // min-height: 50vh
 
   .about-photos
     @media (min-width: $screen-xs)
