--- a/public/sass/templates/_portfolio.sass
+++ b/public/sass/templates/_portfolio.sass
@@ -6,9 +6,20 @@
     align-items: center
     justify-content: center
 
-    a 
+    a
       width: 100%
       height: 100%
+
+      &::before
+        content: ' '
+        display: inline-block
+        vertical-align: middle
+        height: 100%
+
+      img
+        display: inline-block;
+        vertical-align: middle;
+
 
   .port-text
     padding: $unit*5
